# Vision

./: .dockerignore  .env  .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  SETUP_HELP.md  app.py  debug-docker.sh  deploy-simple.sh  deploy.sh  docker-compose.yml  fix-docker.sh  main.py  nginx.conf  pyproject.toml  replit.md  requirements_docker.txt  routes.py  run-docker.sh  run-local.py  run.sh  setup.sh  simple_main.py  start.sh
attached_assets/: Pasted--AI-Agent-Prompt-Build-Vision-App-Environment-Information-Page-Project-Goal--1754131708028_1754131708030.txt  Pasted--Building-4-8s-9-12--1754140644281_1754140644281.txt  Pasted--Checking-port-availability-Port-5099-is-available-Setup-Complete-Starting-Vision-Das-1754209700793_1754209700793.txt  Pasted--Vision-git-main-deploy-simple-sh-Vision-Dashboard-Simple-Deployment-Script--1754141335078_1754141335078.txt  Pasted--Vision-git-main-fix-docker-sh-Fixing-Docker-Setup-for-Vision-Dashboard-1-Clean-1754142242532_1754142242532.txt
data/: bookmarks.yaml  environments.yaml
etc/: freetds.conf  odbcinst.ini
services/: environment_service.py  health_service.py
static/css/: styles.css  vision-app.css
static/js/: app.js  bookmarks.js  dashboard.js  environments.js  main.js  monitor.js
static/templates/: bookmarks.html  environments.html
templates/: _bookmarks.html  _environments.html  base.html  dashboard.html  index.html  index_old.html  monitor.html
